# interaction_aware_mppi

./: README.md  pyproject.toml
examples/jackal_robots/: cfg_jackals.yaml  cfg_point_robot.yaml  objective.py  run_centralized.py  run_decentralized.py  simulator.py
examples/jackal_robots_real_world/: cfg_jackal.yaml  dynamics.py  objective.py  realworld.py  run_realworld.py
examples/nh_point_robots/: cfg_agents.yaml  cfg_pointRobot.yaml  cfg_system.yaml  dynamics.py  objective.py  run.py  simulator.py
examples/point_robots/: cfg_point_robot.yaml  dynamics.py  objective.py  run.py  run_centralized.py  run_centralized_n_episodes.py  run_decentralized.py  simulator.py
examples/roboats/: cfg_roboats.yaml  dynamics.py  objective.py  run_centralized.py  run_decentralized.py  simulator.py
examples/roboats_real_world/: cfg_roboats.yaml  dynamics.py  objective.py  realworld.py  run_centralized.py  run_decentralized.py  run_realworld.py  simulator.py
examples/roboats_real_world/urdf_files/: quarter_roboat.urdf  sphere.urdf
examples/two_point_robots/: cfg_agents.yaml  cfg_pointRobot.yaml  cfg_system.yaml  dynamics.py  objective.py  run.py  simulator.py
ia_mppi/: ia_mppi.py  nh_ia_mppi.py
